--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,6 @@ spring.datasource.username: root
 spring.datasource.password:
 spring.datasource.driver-class-name: com.mysql.cj.jdbc.Driver
 
-#spring.jpa.hibernate.ddl-auto: update
 spring.jpa.database-platform: org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql: false
 spring.jpa.generate-ddl: false
@@ -16,28 +15,5 @@ spring.jpa.hibernate.naming.physical-strategy: org.hibernate.boot.model.naming.P
 spring.jpa.hibernate.use-new-id-generator-mappings= false
 
 # App Properties
-spring.app.jwtSecret: bezKoderSecretKey
+spring.app.jwtSecret: !pmvapi653@#
 spring.app.jwtExpirationMs: 1800000
-
-#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
-#logging:
-#  env: dev
-#  file.path: /export/logs/report
-#  config: classpath:logback-config.xml
-#  level:
-#    root: INFO
-#    '[org.springframework.web]': INFO
-#    '[org.hibernate]': INFO
-#    '[com.overmind.report]': INFO
-#    
-#management:
-#  server:
-#    port: 80
-#  endpoint:
-#    health:
-#      show-components: always
-#      show-details: always
-#  endpoints:
-#    web:
-#      exposure:
-#        include: health,metrics
